--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,15 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+*, html, body {
+  cursor:none;
+
+
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -100,8 +112,41 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+@font-face{
+  font-family: "burtons";
+  src: url('../../public/Burtons.otf');
+}
+
+.inner-cursor {
+  position: fixed;
+  left: 0px;
+  width: 10px;
+  height: 10px;
+  transform: translate(-50%, -50%);
+  background: rgb(255, 255, 255);
+  mix-blend-mode:difference;
+  border-radius: 50%;
+  pointer-events: none;
+  /* transition: width 0.5s, height 0.5s;  */
+  z-index: 10; 
+}
+
+.inner-cursor.grow {
+  width: 25px;
+  height: 25px;
+  transition: width 0.5s, height 0.5s;
+}
+
+.outer-cursor {
+  position: fixed;
+  left: 0px;
+  width: 40px;
+  height: 40px;
+  transform: translate(-50%, -50%);
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 40%;
+  mix-blend-mode: difference;
+  pointer-events: none;
+  transition: 0.05s;
+  z-index: 10;
 }
